<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yazanjayousi.nytimesmostpopulararticles.activities.MainActivity">
    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/day"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_week"
        android:orderInCategory="100"
        android:title="@string/this_week"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_month"
        android:orderInCategory="100"
        android:title="@string/this_month"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
