<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tvArticlePublishedDate"
                android:text="@string/article_date"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:drawablePadding="5dp"
                android:textSize="14sp"
                android:gravity="start|center_vertical"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tvArticleSection"
                android:text="@string/article_section"
                android:textSize="14sp"
                android:gravity="end"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="22dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/article_title" />

        <include layout="@layout/content_fragment" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>